# token-stats

./: .gitignore  AGENTS.md  README.md  deploy.sh  progress.md  review-frontend.md  review-full-diff.md  setup.sh  start.sh  task_plan.md
.github/workflows/: ci.yml
.opencode/: session.json
backend/: Cargo.toml  pricing.toml  subscription_settings.json  vendor_merge.toml
backend/src/: aggregator.rs  ainaiba.rs  app.rs  config.rs  main.rs  models.rs  parser.rs  pricing.rs  quota.rs  routes.rs  settings.rs  time.rs  xunfei.rs
backend/src/quota/: commandcode.rs  kimi.rs  mod.rs  opencode.rs  types.rs  xiaomi_mimo.rs
backend/src/sources/: ccswitch.rs  claude_code.rs  codex.rs  kimi_cli.rs  kimi_code.rs  mod.rs  opencode.rs  pi.rs
backend/src/xunfei/: mod.rs  types.rs
backups/20260519_053946/: usage.jsonl
backups/20260519_054107/: api_filters.json  api_stats.json  usage.jsonl
docs/: fix-plan-taskplane-token-collection.md
docs/plans/: diagnosis-claude-opus-provider-and-pricing.md
docs/superpowers/plans/: 2026-05-17-multi-source-implementation.md  2026-05-23-filters-output-ratio-deepseek-classification.md
docs/superpowers/specs/: 2026-05-17-multi-source-token-stats-design.md  2026-05-23-filters-output-ratio-deepseek-classification-design.md  2026-05-23-sticky-sidebar-topbar-section-nav-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: CustomTooltip.tsx  DailyTrendChart.tsx  DetailedRequests.tsx  GlanceBand.tsx  Header.tsx  KpiStrip.tsx  QuotaCard.tsx  QuotaChips.tsx  QuotaOverview.tsx  SectionNav.tsx  SettingsDrawer.tsx  Sidebar.tsx  SidebarModelPicker.tsx  SidebarSourceList.tsx  SidebarTimeRange.tsx  SidebarVendorList.tsx  TopBar.tsx  VendorBreakdownChart.tsx  VendorModelTable.tsx
frontend/src/data/: transforms.ts
frontend/src/hooks/: shared.ts  useFilterInit.ts  (+3 more)
nginx/: token-stats.conf  token-stats.service  token-stats@.service
scripts/: migrate_deepseek_export_classification.py  recover_token_data.py  refresh-data.sh  reload-pricing.sh
systemd-overrides/: path.conf
(+153 files in other folders)
