[package]
name = "token-stats-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.45", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
flexi_logger = { version = "0.31", features = ["trc"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.22"
toml = "0.8"

[dev-dependencies]
wiremock = "0.6"
temp-env = "0.3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
